--- a/pages/html_template.html
+++ b/pages/html_template.html
@@ -3,8 +3,17 @@
 <head>
 	<title>rabota.ua</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
+	<link rel="stylesheet" href="style.css">
+
 </head>
 <body>
+<div id="TMpanel">
+	<div class = "container_name">
+		<p>Rabota.ua</p>
+	</div>
+</div>
+<div class="ads">
 {{generate_text}}
+</div>
 </body>
 </html>
