--- a/pages/index.html
+++ b/pages/index.html
@@ -3,8 +3,17 @@
 <head>
 	<title>rabota.ua</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
+	<link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-<a href=https://rabota.ua/company6865102/vacancy8241331>Младший финансовый аналитик</a> [ПРО Текнолоджи]</br><a href=https://rabota.ua/company3012246/vacancy8204404>Оператор входящей линии (ночная смена)</a> [Well Tell, ООО]</br><a href=https://rabota.ua/company3012246/vacancy8204409>Оператор входящей линии</a> [Well Tell, ООО]</br><a href=https://rabota.ua/company3012246/vacancy8204437>Оператор входящей линии интернет магазина одежды</a> [Well Tell, ООО]</br><a href=https://rabota.ua/company5128308/vacancy8200825>Консультант в отдел обслуживания (soft collection)</a> [CreditKasa]</br><a href=https://rabota.ua/company574431/vacancy8195662>Project Manager</a> [ЕНЕРДЖІ СЕЙВІНГ СОЛЮШН ТОВ]</br><a href=https://rabota.ua/company3178062/vacancy8233435>Operations Manager (USA)</a> [LOGITY ]</br><a href=https://rabota.ua/company3178062/vacancy8200255>Менеджер по организации международных перевозок, диспетчер, логист</a> [LOGITY ]</br><a href=https://rabota.ua/company444363/vacancy7403618>Junior Data Entry specialist</a> [Intetics Inc]</br>
+<div id="TMpanel">
+	<div class = "container_name">
+		<p>Rabota.ua</p>
+	</div>
+</div>
+<div class="ads">
+<div class="ad"><a href=https://rabota.ua/company7172138/vacancy7363663>Менеджер по работе с клиентской базой ( без поиска клиентов)</a> [MAKCІ ГРУП ХАРКІВ, ТОВ]</div><div class="ad"><a href=https://rabota.ua/company444363/vacancy7403618>Junior Data Entry specialist</a> [Intetics Inc]</div><div class="ad"><a href=https://rabota.ua/company574431/vacancy8195662>Project Manager</a> [ЕНЕРДЖІ СЕЙВІНГ СОЛЮШН ТОВ]</div><div class="ad"><a href=https://rabota.ua/company116059/vacancy5373827>Медичний представник</a> [Берлин-Хеми/А.Менарини Украина ГмбХ, Представительство]</div><div class="ad"><a href=https://rabota.ua/company10137959/vacancy8206161>Logistics coordinator, dispatcher, sales manager</a> [Buddy Moore Trucking]</div><div class="ad"><a href=https://rabota.ua/company3178062/vacancy8200255>Менеджер по организации международных перевозок, диспетчер, логист</a> [LOGITY ]</div><div class="ad"><a href=https://rabota.ua/company574431/vacancy8195369>Дизайнер освещения и интерьера</a> [ЕНЕРДЖІ СЕЙВІНГ СОЛЮШН ТОВ]</div><div class="ad"><a href=https://rabota.ua/company6899237/vacancy8228183>Store manager</a> [H&amp;M]</div><div class="ad"><a href=https://rabota.ua/company5128308/vacancy8200825>Консультант в отдел обслуживания (soft collection)</a> [CreditKasa]</div>
+</div>
 </body>
 </html>
