--- a/pages/html_template.html
+++ b/pages/html_template.html
@@ -9,7 +9,7 @@
 <body>
 <div id="TMpanel">
 	<div class = "container_name">
-		<p>Rabota.ua</p>
+		<p><a href="https://rabota.ua">Rabota.ua</a></p>
 	</div>
 </div>
 <div class="ads">
