--- a/pages/html_template.html
+++ b/pages/html_template.html
@@ -3,13 +3,13 @@
 <head>
 	<title>rabota.ua</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="pages/style.css">
 
 </head>
 <body>
 <div id="TMpanel">
 	<div class = "container_name">
-		<p><a href="https://rabota.ua">Rabota.ua</a></p>
+		<p><a id="logo" href="https://rabota.ua">Rabota.ua</a></p>
 	</div>
 </div>
 <div class="ads">
